add url type for depic to open splimage.

--- a/SPLImage/Splimage-Info.plist
+++ b/SPLImage/Splimage-Info.plist
@@ -39,6 +39,14 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
+			<string>com.commints.splimage</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>splimage</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleURLName</key>
 			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
