--- a/SPLImage/Splimage-Info.plist
+++ b/SPLImage/Splimage-Info.plist
@@ -16,6 +16,22 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
+				<string>Icon-60</string>
+				<string>Icon.png</string>
+				<string>Icon@2x.png</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
+		</dict>
+	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>Icon-72</string>
+				<string>Icon-76</string>
 				<string>Icon.png</string>
 				<string>Icon@2x.png</string>
 			</array>
